--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,8 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  
+  background-color: rgba(139, 128, 128, 0.041);
 }
 button:focus,
 button:focus-visible {
